--- a/templates/index.html
+++ b/templates/index.html
@@ -108,9 +108,8 @@
 
 <footer>
 	<p>
-		<a href="/rss.xml">RSS</a> |
-		<a href="https://github.com/nerdydrew/Random-Pokemon-Generator">GitHub</a> |
-		<a href="mailto:drew@drewm.com">Contact</a> |
+		<a href="/rss.xml">RSS</a> ||
+		<a href="mailto:dexplorex.com">Contact</a> |
 		 Pok&eacute;mon is &copy; Nintendo. Website is &copy; <a href="https://drewm.com">Drew Mitchell</a>.</p>
 </footer>
 
