--- a/templates/index.html
+++ b/templates/index.html
@@ -3,84 +3,85 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pokémon Generator</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <title>Random Pokémon Generator</title>
 </head>
 <body>
-    <h1>Pokémon Generator</h1>
-    
-    <form id="pokemon-form">
-        <label for="n">Generate <select id="n" name="n">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-        </select> Pokémon.</label>
+<header>
+    <h1>Random Pokémon Generator</h1>
+</header>
 
-        <label for="region">Region <select id="region" name="region">
-            {% for region in options.keys() %}
-                <option value="{{ region }}" {% if options.region == region %}selected{% endif %}>{{ region }}</option>
-            {% endfor %}
-        </select></label>
+<form action="/generate" method="POST" id="controls" class="menu">
+    <fieldset>
+        <label>Generate 
+            <select name="n" id="n" required>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6" selected>6</option>
+            </select> Pokémon.
+        </label>
 
-        <label for="type">Type <select id="type" name="type">
-            <option value="normal">Normal</option>
-            <option value="bug">Bug</option>
-            <option value="dark">Dark</option>
-            <option value="dragon">Dragon</option>
-            <option value="electric">Electric</option>
-            <option value="fairy">Fairy</option>
-            <option value="fighting">Fighting</option>
-            <option value="fire">Fire</option>
-            <option value="flying">Flying</option>
-            <option value="ghost">Ghost</option>
-            <option value="grass">Grass</option>
-            <option value="ground">Ground</option>
-            <option value="ice">Ice</option>
-            <option value="poison">Poison</option>
-            <option value="psychic">Psychic</option>
-            <option value="rock">Rock</option>
-            <option value="steel">Steel</option>
-            <option value="water">Water</option>
-        </select></label>
+        <select name="region" id="region" required>
+            <option value="all">All Regions</option>
+			<option value="kanto" title="Generation 1 (Red, Blue, and Yellow)">Kanto</option>
+			<option value="johto" title="Generation 2 (Gold, Silver, and Crystal)">Johto</option>
+			<option value="hoenn" title="Generation 3 (Ruby, Sapphire, and Emerald)">Hoenn</option>
+			<option value="sinnoh" title="Generation 4 (Diamond, Pearl)">Sinnoh</option>
+			<option value="sinnoh_pt" title="Generation 4 (Platinum)">Sinnoh (Platinum)</option>
+			<option value="unova" title="Generation 5 (Black and White)">Unova</option>
+			<option value="unova_b2w2" title="Generation 5 (Black 2 and White 2)">Unova (B2W2)</option>
+			<option value="kalos" title="Generation 6 (X and Y)">Kalos</option>
+			<option value="alola" title="Generation 7 (Sun and Moon)">Alola</option>
+			<option value="alola_usum" title="Generation 7 (Ultra Sun and Ultra Moon)">Alola (USUM)</option>
+			<option value="galar" title="Generation 8 (Sword and Shield)">Galar</option>
+			<option value="hisui" title="Generation 8 (Legends: Arceus)">Hisui</option>
+			<option value="paldea" title="Generation 9 (Scarlet and Violet)">Paldea</option>
+        </select>
 
-        <label><input type="checkbox" name="legendaries">Legendaries</label>
-        <label><input type="checkbox" name="nfes">NFEs</label>
-        <label><input type="checkbox" name="sprites" checked>Sprites</label>
-        <label><input type="checkbox" name="natures">Natures</label>
-        <label><input type="checkbox" name="forms">Forms</label>
+        <select name="type" id="type" required>
+            <option value="all">All Types</option>
+			<option value="bug">Bug</option>
+			<option value="dark">Dark</option>
+			<option value="dragon">Dragon</option>
+			<option value="electric">Electric</option>
+			<option value="fairy">Fairy</option>
+			<option value="fighting">Fighting</option>
+			<option value="fire">Fire</option>
+			<option value="flying">Flying</option>
+			<option value="ghost">Ghost</option>
+			<option value="grass">Grass</option>
+			<option value="ground">Ground</option>
+			<option value="ice">Ice</option>
+			<option value="normal">Normal</option>
+			<option value="poison">Poison</option>
+			<option value="psychic">Psychic</option>
+			<option value="rock">Rock</option>
+			<option value="steel">Steel</option>
+			<option value="water">Water</option>
+        </select>
+    </fieldset>
 
-        <input type="submit" value="Generate">
-    </form>
+    <fieldset>
+        <label><input type="checkbox" id="legendaries" name="legendaries" value="true" checked>Legendaries</label>
 
-    <div id="results"></div>
+        <label><input type="checkbox" id="nfes" name="nfes" value="true" checked>NFEs</label>
 
-    <script>
-        $(document).ready(function() {
-            $('#pokemon-form').submit(function(event) {
-                event.preventDefault();
-                $.ajax({
-                    type: 'POST',
-                    url: '/generate',
-                    data: $('#pokemon-form').serialize(),
-                    success: function(data) {
-                        var resultsHtml = '';
-                        data.forEach(function(pokemon) {
-                            resultsHtml += '<p>' + pokemon.name;
-                            if ("types" in pokemon) {
-                                resultsHtml += ' - ' + pokemon.types.join(', ');
-                            }
-                            if ("sprites" in pokemon) {
-                                resultsHtml += ' - <img src="' + pokemon.sprites.normal + '">';
-                            }
-                            resultsHtml += '</p>';
-                        });
-                        $('#results').html(resultsHtml);
-                    }
-                });
-            });
-        });
-    </script>
+        <label><input type="checkbox" id="sprites" name="sprites" value="true" checked>Sprites</label>
+        <label><input type="checkbox" id="natures" name="natures" value="true">Natures</label>
+        <label><input type="checkbox" id="forms" name="forms" value="true" checked>Forms</label>
+
+        <input value="Generate" type="submit" />
+    </fieldset>
+</form>
+
+<section id="results"></section>
+
+<footer>
+    <p>
+        Pokémon is &copy; Nintendo.</p>
+</footer>
+
 </body>
 </html>
