--- a/templates/indexxxx.html
+++ b/templates/indexxxx.html
@@ -136,7 +136,7 @@
     </div>
 
     <footer>
-        <p>Zeshan ALi Shoban . D Explore X</p>
+        <p>D Explore X</p>
     </footer>
     <!-- Add JavaScript to handle the form submission and update results -->
     <!-- Add JavaScript to handle the form submission and update results -->
